--- a/2gis_full.html
+++ b/2gis_full.html
@@ -1006,76 +1006,374 @@
 
 //Школа №41
 //-------------------------------------------------------------------------------------------------
+
+
 			var coordinates =[
-			
+			[49.945832, 36.23595],
+			[49.946099, 36.241721]
 			];
 			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
 
-			49.945832° 36.23595°
-			49.946099° 36.241721°
+			var coordinates =[
+			[49.946581, 36.235872],
+			[49.946738, 36.238714],
+			[49.948226, 36.235106],
+			[49.946079, 36.240187]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
 
-			49.946581° 36.235872°
-			49.946738° 36.238714°
-			49.948226° 36.235106°
-			49.946079° 36.240187°
+			var coordinates =[
+			[49.933376, 36.24508],
+			[49.93908, 36.239738],
+			[49.940856, 36.239411],
+			[49.945172, 36.240838],
+			[49.947179, 36.242759],
+			[49.948298, 36.24303],
+			[49.95054, 36.243115],
+			[49.955474, 36.246001],
+			[49.956398, 36.249032]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
 
-			49.933376° 36.24508°
-			49.93908° 36.239738°
-			49.940856° 36.239411°
-			49.945172° 36.240838°
-			49.947179° 36.242759°
-			49.948298° 36.24303°
-			49.95054° 36.243115°
-			49.955474° 36.246001°
-			49.956398° 36.249032°
+			var coordinates =[
+			[49.945533, 36.258625],
+			[49.943937, 36.243726],
+			[49.944002, 36.24226],
+			[49.944005, 36.240332],
+			[49.943955, 36.24022],
+			[49.943713, 36.237131]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
 
-			49.945533° 36.258625°
-			49.943937° 36.243726°
-			49.944002° 36.24226°
-			49.944005° 36.240332°
-			49.943955° 36.24022°
-			49.943713° 36.237131°
+			var coordinates =[
+			[49.931283, 36.203007],
+			[49.931796, 36.206557],
+			[49.932828, 36.206346],
+			[49.933377, 36.205362]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
 
-			49.931283° 36.203007°
-			49.931796° 36.206557°
-			49.932828° 36.206346°
-			49.933377° 36.205362°
+			var coordinates =[
+			[49.932714, 36.207959],
+			[49.932261, 36.208525],
+			[49.93178, 36.208586],
+			[49.93161, 36.208299],
+			[49.930553, 36.208792],
+			[49.929251, 36.206223],
+			[49.931664, 36.206669],
+			[49.931772, 36.208514]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
 
-			49.932714° 36.207959°
-			49.932261° 36.208525°
-			49.93178° 36.208586°
-			49.93161° 36.208299°
-			49.930553° 36.208792°
-			49.929251° 36.206223°
-			49.931664° 36.206669°
-			49.931772° 36.208514°
+			var coordinates =[
+			[49.931208, 36.212453],
+			[49.930792, 36.211839],
+			[49.930085, 36.209627],
+			[49.930553, 36.208768]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
 
-			49.931208° 36.212453°
-			49.930792° 36.211839°
-			49.930085° 36.209627°
-			49.930553° 36.208768°
+			var coordinates =[
+			[49.9312, 36.210095],
+			[49.930361, 36.210463],
+			[49.930077, 36.209639],
+			[49.928901, 36.209519]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
 
-			49.9312° 36.210095°
-			49.930361° 36.210463°
-			49.930077° 36.209639°
-			49.928901° 36.209519°
+			var coordinates =[
+			[49.949804, 36.243065],
+			[49.95102, 36.2384],
+			[49.950893, 36.23756]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
 
-			49.949804° 36.243065°
-			49.95102° 36.2384°
-			49.950893° 36.23756°
+			var coordinates =[
+			[49.949362, 36.243068],
+			[49.949436, 36.242087],
+			[49.949871, 36.240702],
+			[49.950369, 36.240869]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
 
-			49.949362° 36.243068°
-			49.949436° 36.242087°
-			49.949871° 36.240702°
-			49.950369° 36.240869°
+			var coordinates =[
+			[49.949075, 36.243055],
+			[49.949177, 36.241589],
+			[49.949961, 36.239622]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
 
-			49.949075° 36.243055°
-			49.949177° 36.241589°
-			49.949961° 36.239622°
+			var coordinates =[
+			[49.943416, 36.252541],
+			[49.943127, 36.250072],
+			[49.943316, 36.250021],
+			[49.942154, 36.239762],
+			[49.942048, 36.236749],
+			[49.941831, 36.233322],
+			[49.941056, 36.230155],
+			[49.939905, 36.226452],
+			[49.939615, 36.225876],
+			[49.939301, 36.224775],
+			[49.939333, 36.222886],
+			[49.939277, 36.222273],
+			[49.939108, 36.221573]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
 
-			
+			var coordinates =[
+			[49.940996, 36.225202],
+			[49.939465, 36.226319],
+			[49.937227, 36.227141]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
 
+			var coordinates =[
+			[49.949109, 36.216715],
+			[49.94843, 36.215337]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
 
+			var coordinates =[
+			[49.937807, 36.231011],
+			[49.936337, 36.232636],
+			[49.935581, 36.23279],
+			[49.935447, 36.232976],
+			[49.935206, 36.23436],
+			[49.934867, 36.234184],
+			[49.934111, 36.234085],
+			[49.934033, 36.234985],
+			[49.933694, 36.236028],
+			[49.930134, 36.235582],
+			[49.926108, 36.234328],
+			[49.925423, 36.233978],
+			[49.922698, 36.233594],
+			[49.921768, 36.232018],
+			[49.921677, 36.231189],
+			[49.921269, 36.228769],
+			[49.919357, 36.224785],
+			[49.918865, 36.223174],
+			[49.918303, 36.220799],
+			[49.918048, 36.22035],
+			[49.918088, 36.217261],
+			[49.91805, 36.216631],
+			[49.91781, 36.214507],
+			[49.917349, 36.211951],
+			[49.917082, 36.211968],
+			[49.916654, 36.212201],
+			[49.916537, 36.211649],
+			[49.915153, 36.211864]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.938841, 36.238871],
+			[49.939623, 36.23813],
+			[49.93979, 36.237909],
+			[49.940695, 36.237671],
+			[49.94074, 36.237979],
+			[49.941769, 36.237914],
+			[49.942186, 36.238049],
+			[49.943793, 36.238227]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.948327, 36.242989],
+			[49.948531, 36.238815],
+			[49.948624, 36.238406],
+			[49.948726, 36.236253],
+			[49.948327, 36.235104]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.950902, 36.237547],
+			[49.950681, 36.237521],
+			[49.949822, 36.239079]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.946715, 36.240984],
+			[49.947339, 36.241609],
+			[49.948395, 36.241824]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.947103, 36.240089],
+			[49.947665, 36.240534],
+			[49.94851, 36.240579]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.947431, 36.240368],
+			[49.947735, 36.239837],
+			[49.948526, 36.239743]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.944445, 36.236371],
+			[49.944668, 36.240057],
+			[49.944551, 36.240467]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.936962, 36.215242],
+			[49.937621, 36.214703]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.945096, 36.236176],
+			[49.945313, 36.240381],
+			[49.945211, 36.240834]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.932454, 36.214308],
+			[49.931186, 36.212454],
+			[49.929621, 36.21346],
+			[49.929011, 36.213567],
+			[49.928884, 36.213987],
+			[49.929107, 36.214383],
+			[49.930459, 36.214696],
+			[49.930889, 36.214968],
+			[49.931467, 36.214861],
+			[49.932656, 36.21519]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.951166, 36.243425],
+			[49.952269, 36.239289]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.941006, 36.225172],
+			[49.940768, 36.221878],
+			[49.940517, 36.219977]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.940763, 36.221893],
+			[49.93932, 36.222343]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.940654, 36.220982],
+			[49.939128, 36.221482]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.940768, 36.221883],
+			[49.942783, 36.219966]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.94248, 36.218935],
+			[49.941115, 36.220175]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.921542, 36.230163],
+			[49.924514, 36.230299],
+			[49.926379, 36.229969],
+			[49.927151, 36.232285],
+			[49.927383, 36.233683],
+			[49.927653, 36.234811]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.927239, 36.232618],
+			[49.928634, 36.232853],
+			[49.929279, 36.232815],
+			[49.929673, 36.233107],
+			[49.933697, 36.234389],
+			[49.93374, 36.234905]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.946309, 36.241921],
+			[49.948163, 36.237652],
+			[49.948628, 36.236921]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.948499, 36.238769],
+			[49.947709, 36.239013],
+			[49.947587, 36.238986]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.921731, 36.231577],
+			[49.924152, 36.232021],
+			[49.924742, 36.232176],
+			[49.926384, 36.232475],
+			[49.926751, 36.232721],
+			[49.927219, 36.232625]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.931285, 36.202989],
+			[49.930918, 36.202794],
+			[49.925772, 36.201911],
+			[49.924836, 36.201895],
+			[49.923176, 36.203583],
+			[49.921634, 36.206223]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.926047, 36.205675],
+			[49.929235, 36.20622]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.928762, 36.206161],
+			[49.9289, 36.20684],
+			[49.929184, 36.206592],
+			[49.929518, 36.206724]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.941167, 36.242566],
+			[49.942429, 36.242536],
+			[49.942483, 36.24238],
+			[49.944102, 36.242329],
+			[49.944954, 36.241904],
+			[49.945047, 36.241811]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.941553, 36.24034],
+			[49.942194, 36.240345]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+			var coordinates =[
+			[49.942929, 36.241034],
+			[49.944003, 36.241117]
+			];
+			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
 
 
 
