--- a/2gis_full.html
+++ b/2gis_full.html
@@ -192,7 +192,7 @@
 							[49.935882,36.251388],				//marker
 							g35_coordinates,					//polygon
 							'green',                              //color
-							false);								//border markers on/off
+							true);								//border markers on/off
 
 //Школа №66
 //-----------------------------------------------------------------------------------
@@ -1006,7 +1006,57 @@
 
 //Школа №41
 //-------------------------------------------------------------------------------------------------
+			var s41_coordinates =[		
+				[49.941984, 36.242535],//52
+				[49.941811, 36.240845],//51
+				[49.9413, 36.240794],//50
+				[49.941197, 36.239805],//49
+				[49.940003, 36.240028],//48
+				[49.939948, 36.239586],//47
+				[49.939429, 36.239679],//46
+				[49.939381, 36.239201],//45
+				[49.939913, 36.239114],//44
+				[49.939837, 36.237893],//43
+				[49.940701, 36.237675],
+				[49.940735, 36.237968],
+				[49.941691, 36.237903],
+				[49.942075, 36.238006],
+				[49.942031, 36.236552],
+				[49.941936, 36.235097],
+				[49.941857, 36.233385],
+				[49.941058, 36.230182],
+				[49.940417, 36.228108],
+				[49.940127, 36.228266],
+				[49.939793,36.228404],
+				[49.939541,36.228559],
+				[49.939251, 36.228781],
+				[49.938411, 36.229287],
+				[49.93764, 36.229645],
+				[49.937835, 36.2308],
+				[49.937804, 36.231026],
+				[49.937633, 36.231297],
+				[49.936321, 36.232641],
+				[49.935607, 36.232786],
+				[49.93545, 36.232983],
+				[49.935449, 36.233073],
+				[49.935593, 36.233059],
+				[49.936034, 36.23311],
+				[49.936037, 36.234015],
+				[49.93532,  36.233949],
+				[49.935204, 36.234365],
+				[49.934978, 36.236114],
+				[49.935022, 36.237089],
+				[49.934079, 36.237985],
+				[49.933748, 36.237083],//37
+				[49.930691, 36.236705],//36
+				[49.925606, 36.235135] //35
+				
+				
 
+
+
+			];
+			DG.polyline(s41_coordinates, {color: 'Purple'}).addTo(map);
 
 			var coordinates =[
 			[49.945832, 36.23595],
