--- a/2gis_full.html
+++ b/2gis_full.html
@@ -824,97 +824,549 @@
 
 //гимназия №12
 //-------------------------------------------------------------------------------------------------	
+			var g12_1_coordinates = [
+				[49.979425, 36.246917],
+				[49.976633, 36.253036],
+				[49.976485, 36.253291],
+				[49.972102, 36.258843],
+				[49.971909, 36.259024],
+				[49.971457, 36.25929],
+				[49.970903, 36.259441],
+				[49.970374, 36.259464],
+				[49.970124, 36.259436],
+				[49.970196, 36.256597],
+				[49.970237, 36.256105],
+				[49.970343, 36.255345],
+				[49.970559, 36.254362],
+				[49.9723, 36.249427],
+				[49.972698, 36.248945],
+				[49.971569, 36.247956],
+				[49.971636, 36.24748],
+				[49.971657, 36.245853],
+				[49.972134, 36.24566],
+				[49.975861, 36.24478],
+				[49.975951, 36.245407],
+				[49.976529, 36.245314],
+				[49.976945, 36.245328],
+				[49.977205, 36.245395],
+				[49.977678, 36.245695],
+				[49.977794, 36.245302],
+				[49.978322, 36.245672],
+				[49.978219, 36.246054],
+				[49.979216, 36.246719]
+				];
+				createTerritory('Гімназія №12',						//name
+							'https://gymnasium12.klasna.com/',	    //link
+							[49.972469,36.250718],				//marker
+							g12_1_coordinates,					//polygon
+							'Olive',                           //color
+							true);								//border markers on/off
 
-			var coordinates = [
-				[49.970707, 36.247243],
-				[49.972685, 36.248915]
+				var g12_2_coordinates = [
+				[49.985222, 36.258785],
+				[49.984889, 36.258367],
+				[49.98046, 36.253147],
+				[49.980771, 36.252493],
+				[49.981155, 36.253052],
+				[49.981518, 36.253213],
+				[49.981778, 36.252017],
+				[49.982254, 36.252208],
+				[49.981825, 36.254657],
+				[49.98228, 36.255192],
+				[49.982695, 36.254456],
+				[49.983326, 36.25518],
+				[49.983103, 36.255754],
+				[49.983594, 36.256296],
+				[49.983861, 36.255788],
+				[49.984988, 36.25661],
+				[49.985649, 36.257252],
+				[49.985601, 36.257662]
+				];
+				createTerritory('Гімназія №12',						//name
+							'https://gymnasium12.klasna.com/',	    //link
+							[49.972469,36.250718],				//marker
+							g12_2_coordinates,					//polygon
+							'Olive',                           //color
+							false);								//border markers on/off
+
+//Школа №7 
+//-----------------------------------------------------------------------------------------------------	
+
+				var s7_coordinates = [
+				[49.975861, 36.24478],
+				[49.972134, 36.24566],
+				[49.971657, 36.245853],
+				[49.971659, 36.244232],
+				[49.971825, 36.241237],
+				[49.972702, 36.239771],
+				[49.971844, 36.238515],
+				[49.971283, 36.239318],
+				[49.970564, 36.240199],
+				[49.970536, 36.239235],
+				[49.969986, 36.239225],
+				[49.969523, 36.237674],
+				[49.97019, 36.237139],
+				[49.969615, 36.235552],
+				[49.969132, 36.235931],
+				[49.968103, 36.234547],
+				[49.967931, 36.234163],
+				[49.967096, 36.233516],
+				[49.966956, 36.233611],
+				[49.966271, 36.231427],
+				[49.96863, 36.224995],
+				[49.969298, 36.22495],
+				[49.969247, 36.224216],
+				[49.969711, 36.222692],
+				[49.970618, 36.223283],
+				[49.970851, 36.22334],
+				[49.974881, 36.223255],
+				[49.974731, 36.230005],
+				[49.974861, 36.23441],
+				[49.975712, 36.233299],
+				[49.975767, 36.233525],
+				[49.97611, 36.236832],
+				[49.979121, 36.236203],
+				[49.979192, 36.236676],
+				[49.978708, 36.2379],
+				[49.978643, 36.238581],
+				[49.978616, 36.24055],
+
+				];
+				DG.polyline(s7_coordinates, {color: 'Teal'}).addTo(map);
+
+var coordinates = [
+			[49.971633, 36.235968],
+			[49.971801, 36.236524],
+			[49.97215, 36.236373]
 			];
-			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
-			var coordinates = [
-				[49.976384, 36.247418],
-				[49.976818, 36.246874],
-				[49.977356, 36.248018],
-				[49.977476, 36.247887]
-				];
-			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
-			var coordinates = [
-				[49.971628, 36.247558],
-				[49.972402, 36.247308],
-				[49.972899, 36.247426]
-				];
-			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
-			var coordinates = [
-				[49.967996, 36.258851],
-				[49.968274, 36.255261],
-				[49.970279, 36.252953],
-				[49.971044, 36.250878],
-				[49.9727, 36.24894],
-				[49.972832, 36.248326],
-				[49.972873, 36.247556],
-				[49.973069, 36.246575],
-				[49.973233, 36.246359],
-				[49.973278, 36.245271],
-				[49.973351, 36.244822],
-				[49.973374, 36.241401],
-				[49.973497, 36.240934]
-				];
-			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
-			var coordinates = [
-				[49.97833, 36.246127],
-				[49.978095, 36.247674]
-				];
-			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
-			var coordinates = [
-				[49.979341, 36.246817],
-				[49.977198, 36.245393],
-				[49.976719, 36.245311],
-				[49.97599, 36.245393]
-				];
-			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
-			var coordinates = [
-				[49.974823, 36.248204],
-				[49.973566, 36.246909],
-				[49.974161, 36.245685],
-				[49.974594, 36.245622],
-				[49.974925, 36.245793],
-				[49.975488, 36.246888]
-				];
-			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
-			var coordinates = [
-				[49.973626, 36.246771],
-				[49.973032, 36.246153],
-				[49.972128, 36.246144]
-				];
-			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
-			var coordinates = [
-				[49.972707, 36.239773],
-				[49.971856, 36.241189],
-				[49.971596, 36.247846]
-				];
-			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
-			var coordinates = [
-				[49.976603, 36.248563],
-				[49.975961, 36.245429],
-				[49.975298, 36.240908],
-				[49.974858, 36.234366],
-				[49.974728, 36.230038],
-				[49.974838, 36.226683],
-				[49.97488, 36.223243]
-				];
-			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
-			var coordinates = [
-				[49.976736, 36.248857],
-				[49.984875, 36.258351]
-				];
-			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
-			var coordinates = [
-				[49.970114, 36.259339],
-				[49.971028, 36.259251],
-				[49.971911, 36.258821],
-				[49.976514, 36.253098],
-				[49.979366, 36.246881]
-				];
-			DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.970196, 36.237141],
+			[49.969478, 36.235143],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.971735, 36.242875],
+			[49.972489, 36.242671],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.971706, 36.243397],
+			[49.971867, 36.243418],
+			[49.972422, 36.243108],
+			[49.972388, 36.242707],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.971715, 36.245077],
+			[49.971979, 36.244773],
+			[49.972556, 36.244604],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.971716, 36.245088],
+			[49.971818, 36.245624],
+			[49.973229, 36.245306],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.972441, 36.23938],
+			[49.972899, 36.238629],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.973936, 36.231237],
+			[49.973926, 36.230187],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.974028, 36.237521],
+			[49.97386, 36.237201],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.973975, 36.232684],
+			[49.973891, 36.233309],
+			[49.973931, 36.234006],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.972568, 36.241434],
+			[49.973378, 36.241413],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.973372, 36.241709],
+			[49.972682, 36.241809],
+			[49.972671, 36.242015],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.973353, 36.243514],
+			[49.972827, 36.24357],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.969126, 36.233639],
+			[49.968887, 36.232633],
+			[49.968676, 36.23242],
+			[49.968021, 36.228795],
+			[49.967883, 36.228561],
+			[49.967768, 36.228013],
+			[49.967746, 36.227462],
+			[49.967931, 36.226947],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.972432, 36.23541],
+			[49.971095, 36.236324],
+			[49.970922, 36.236546],
+			[49.969074, 36.238049],
+			[49.9688, 36.238161],
+			[49.967703, 36.238338],
+			[49.967216, 36.238503],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.973287, 36.224571],
+			[49.973338, 36.230997],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.97117, 36.218265],
+			[49.970881, 36.222518],
+			[49.970837, 36.223628],
+			[49.971205, 36.232548],
+			[49.974957, 36.241064],
+			[49.975314, 36.241428],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.968105, 36.22929],
+			[49.967755, 36.229424],
+			[49.967003, 36.229998],
+			[49.966788, 36.230031],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.972701, 36.239771],
+			[49.971838, 36.241216],
+			[49.971655, 36.24422],
+			[49.971722, 36.245074],
+			[49.971648, 36.247454],
+			[49.971573, 36.247949],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.976613, 36.248578],
+			[49.975956, 36.245422],
+			[49.975292, 36.240924],
+			[49.974738, 36.230001],
+			[49.974836, 36.226621],
+			[49.974874, 36.223304],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.976771, 36.243384],
+			[49.975741, 36.233302],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.967671, 36.24308],
+			[49.968132, 36.242976],
+			[49.96863, 36.242569],
+			[49.97127, 36.239324],
+			[49.973012, 36.236834],
+			[49.975715, 36.233284],
+			[49.976122, 36.232802],
+			[49.977247, 36.231605],
+			[49.977552, 36.230213],
+			[49.980025, 36.230959],
+			[49.981333, 36.230681],
+			[49.981843, 36.231012],
+			[49.982488, 36.231008],
+			[49.982896, 36.230799],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.976112, 36.236832],
+			[49.977218, 36.236619],
+			[49.977524, 36.238658],
+			[49.977501, 36.238933],
+			[49.977743, 36.240427],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.972088, 36.22336],
+			[49.972176, 36.228054],
+			[49.972478, 36.228054],
+			[49.972497, 36.230705],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.972268, 36.230615],
+			[49.972067, 36.231992],
+			[49.971999, 36.232619],
+			[49.971984, 36.234374],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.971875, 36.22806],
+			[49.971896, 36.230453],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.970992, 36.22808],
+			[49.974751, 36.228018],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.969475, 36.227561],
+			[49.968123, 36.2278],
+			[49.967758, 36.227829],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.969297, 36.224956],
+			[49.968649, 36.225006],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.967988, 36.22871],
+			[49.969266, 36.228502],
+			[49.969548, 36.228502],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.971995, 36.233155],
+			[49.973383, 36.233599],
+			[49.973449, 36.234403],
+			[49.97296, 36.234913],
+			[49.972512, 36.234189],
+			[49.972118, 36.234021],
+			[49.971985, 36.234027],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.973491, 36.244022],
+			[49.975252, 36.241303],
+			[49.977945, 36.240375],
+			[49.978462, 36.240641],
+			[49.979288, 36.240023],
+			[49.980381, 36.239834],
+			[49.981444, 36.241096],
+			[49.981668, 36.240944],
+			[49.981736, 36.241008],
+			[49.981743, 36.241267],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.9748, 36.226652],
+			[49.972146, 36.226704],
+			[49.97102, 36.22675],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.983282, 36.224252],
+			[49.978952, 36.222068],
+			[49.977261, 36.222979],
+			[49.970805, 36.22331],
+			[49.966221, 36.220385],
+			[49.965829, 36.220242],
+			[49.961458, 36.214872],
+			[49.959644, 36.211112],
+			[49.958969, 36.21015],
+			[49.956909, 36.208208],
+			[49.955073, 36.207169],
+			[49.955006, 36.206887],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.969615, 36.229233],
+			[49.966435, 36.231394],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.969421, 36.226687],
+			[49.967934, 36.226926],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.969697, 36.222721],
+			[49.969252, 36.224208],
+			[49.969722, 36.23016],
+			[49.970241, 36.233279],
+			[49.971595, 36.238145],
+			[49.971962, 36.238655],
+			[49.97448, 36.24245],
+			[49.975333, 36.244225],
+			[49.975519, 36.244355],
+			[49.975754, 36.244288],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.974743, 36.231529],
+			[49.971185, 36.230182],
+			[49.970973, 36.230032],
+			[49.969883, 36.230077],
+			[49.969728, 36.230147],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.96871, 36.232488],
+			[49.967103, 36.233505],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.969781, 36.230551],
+			[49.966646, 36.232432],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.97482, 36.224539],
+			[49.970888, 36.224643],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.973489, 36.240925],
+			[49.973376, 36.241342],
+			[49.973353, 36.244834],
+			[49.973236, 36.246361],
+			[49.973084, 36.246538],
+			[49.972871, 36.247543],
+			[49.9728, 36.248545],
+			[49.972697, 36.248947],
+			[49.971038, 36.250904],
+			[49.970251, 36.253003],
+			[49.968265, 36.255254],
+			[49.967999, 36.258876],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.968646, 36.225017],
+			[49.968439, 36.226019],
+			[49.968114, 36.226498],
+			[49.967451, 36.228114],
+			[49.966943, 36.229537],
+			[49.96708, 36.22993],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.970685, 36.235229],
+			[49.971984, 36.234382],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.975141, 36.239227],
+			[49.974461, 36.239963],
+			[49.974505, 36.240067],
+			[49.973944, 36.240661],
+			[49.973626, 36.241104],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.971574, 36.238098],
+			[49.971375, 36.238162],
+			[49.970787, 36.238237],
+			[49.970586, 36.238211],
+			[49.970371, 36.23807],
+			[49.970264, 36.2381],
+			[49.970158, 36.238353],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.976268, 36.238438],
+			[49.975162, 36.238529],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.971491, 36.233232],
+			[49.971288, 36.233398],
+			[49.970333, 36.233749],
+			[49.970227, 36.233264],
+			[49.967948, 36.234157],
+			[49.967104, 36.233504],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.974528, 36.244581],
+			[49.973852, 36.243461],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.976294, 36.243943],
+			[49.975804, 36.244176],
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.973612, 36.23805],
+			[49.97478, 36.236574],
+			[49.974964, 36.236456]
+];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+var coordinates = [
+			[49.969939, 36.231311],
+			[49.974578, 36.232896],
+			[49.975005, 36.232972],
+			[49.975441, 36.232916],
+			[49.976333, 36.232508]
+			];
+DG.polyline(coordinates, {color: 'blue'}).addTo(map);
+
+
+
+
 			
 		});
 	</script>	
